# boilerplate-cinder-opencv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  update.sh
CMake/: FindCinder.cmake  Version.cmake
code/: CMakeLists.txt  app.cpp
include/: CinderOpenCV.h
